# test-task

./: .gitignore  pyproject.toml
mainApp/api_v1/: permissions.py  urls.py  views.py
mainApp/api_v1/serializers/: lesson_serializers.py  product_serializers.py
mainApp/group/: admin.py  models.py  signals.py  utils.py
mainApp/group/migrations/: 0001_initial.py  0002_alter_group_options.py
mainApp/lesson/: admin.py  models.py
mainApp/lesson/migrations/: 0001_initial.py
mainApp/mainApp/: settings.py  urls.py
mainApp/product/: admin.py  models.py
mainApp/product/migrations/: 0001_initial.py
